--- a/views/register.pug
+++ b/views/register.pug
@@ -1,16 +1,25 @@
-html
+extends base.pug
 
-    head
-        title
-            | Logon / Register
-            
-    body
-        if errors
-            for error in errors
-                p
-                    | #{error.msg}
-        form(method="post", action="/register")
-            input(type="text", name="email")
-            input(type="text", name="password")
-            input(type="text", name="password2")
-            input(type="submit")
+block content
+    if errors
+        for error in errors
+            div(class="alert alert-danger")
+                | #{error.msg}
+    div(class="container")
+        form(method="post", action="")
+            div(class="form-group")
+                label(for="exampleInputEmail1")
+                    | Email address
+                input(type="email", class="form-control", id="exampleInputEmail1", name="email", placeholder="Enter email")
+                div(class="form-group")
+                    label(for="exampleInputPassword1")
+                        | Password
+                    input(type="password", class="form-control", name="password", id="exampleInputPassword1", placeholder="Password")
+                div(class="form-group")
+                    label(for="exampleInputPassword2")
+                        | Enter your password again
+                    input(type="password", class="form-control", name="password2", id="exampleInputPassword1", placeholder="Password")
+
+                button(type="submit", class="btn btn-primary")
+                    | Submit
+
