--- a/views/product.pug
+++ b/views/product.pug
@@ -43,6 +43,48 @@ block content
 					div(style="height: 20%;")
 						button(type="submit", class="btn btn-outline-primary")
 							| &nbsp; Add to cart
+	div(style="margin-top: 10%;")
+		form(method="post", action="/addReview")
+			div(class="container")
+				ul(class="nav nav-tabs", id="myTab", role="tablist")
+					li(class="nav-item")
+						a(class="nav-link active", id="home-tab", data-toggle="tab", href="#home", role="tab", aria-controls="home", aria-selected="true")
+							| Write a review
+					li(class="nav-item")
+						a(class="nav-link", id="profile-tab", data-toggle="tab", href="#profile", role="tab", aria-controls="profile", aria-selected="false")
+							| All reviews
+				div(class="tab-content", id="myTabContent")
+					div(class="tab-pane fade show active", id="home", role="tabpanel", aria-labelledby="home-tab")
+						form(method="post", action="")
+							div(class="form-group")
+								label(for="rating")
+									| Rating
+								input(type="number", class="form-control", id="rating", name="rating", value="1", min="1", max="5")
+							div(class="form-group")
+								label(for="name")
+									| Name
+								input(type="text", class="form-control", id="name", name="name", placeholder="Enter name")
+							div(class="form-group")
+								label(for="email")
+									| Email
+								input(type="email", class="form-control", id="email", name="email", placeholder="Enter email")
+							div(class="form-group")
+								label(for="review_content")
+									| Full review
+								textarea(class="form-control", name="review", id="review_content", rows="3", placeholder="Enter your review")
+							button(type="submit", class="btn btn-primary")
+								| Submit
+							input(type="hidden", name="prod_name", value=`${product.title}`)
 
+					div(class="tab-pane fade active", id="profile", role="tabpanel", aria-labelledby="profile-tab")
+						
+						b
+							| Average rating: #{product.average_rating}
 
-	
+						for Review in product.reviews
+							div
+								b
+									| #{Review.name}: #{Review.star_rating}
+								br
+								| #{Review.review}
+								br
